refact: 당첨 번호 입력 시 예외 처리 코드 리팩토링